logs/tti-retro-160530_123353.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  tt-beta-v.1.0.1 (Squirting Flower)
Preloading avatars...
Done preloading avatars.
Traceback (most recent call last):
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Toontown\Toontown\toontown\toonbase\ToontownStart.py", line 129, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 53, in <module>
    import PlayGame
  File "toontown\distributed\PlayGame.py", line 105
    State.State('TEHood', self.enterTEHood, self.exitTEHood, ['quietZone'])
    ^
IndentationError: unexpected indent
